# demographic_inference_nigeria

./: .gitignore  README.md  pyproject.toml
data/: annotations_demographics.csv  gender_scraped.csv  labeled_2000.csv  name_matching_eval.json  names_attributes_map.csv  user_profiles.csv
data/user_profiles/: .part-00000-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00001-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00002-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00003-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00004-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00005-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00006-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00007-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00008-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00009-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00010-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  .part-00011-4f4e9890-c588-4d9f-902b-4888da02ae7d-c000.snappy.parquet.crc  (+38 more)
models/: data_formatting.py  format_data.py  label_propagation.py  loading_utils.py  match_names.py  name_matching.py  name_matching_old.py
predictions/: name_matching_scores_ethnicity.csv  name_matching_scores_gender.csv  name_matching_scores_religion.csv
src/: Untitled.ipynb  config.py  format_data.py  label_propagation.py  loading_utils.py  match_names.py
